<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.characterdetail.CharacterDescriptionFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/character_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_card_view"
        android:elevation="@dimen/elevation_card_view"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/corner_radius_card_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_character_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/character_image_description"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_character_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_gradient_background"
                android:gravity="center"
                android:padding="@dimen/padding_text_view"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_character_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/character_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/character_info_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_card_view"
        android:elevation="@dimen/elevation_card_view"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/corner_radius_card_view"
        app:layout_constraintTop_toBottomOf="@id/character_card_view"
        tools:visibility="visible">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_fragment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text_view"
                android:text="@string/status"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toStartOf="@+id/tv_character_fragment_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_character_fragment_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/character_fragment_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_fragment_status"
                app:layout_constraintTop_toTopOf="@id/character_fragment_status" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_fragment_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text_view"
                android:text="@string/species"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toStartOf="@id/tv_character_fragment_species"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_character_fragment_status" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_character_fragment_species"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/character_fragment_species"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_fragment_species"
                app:layout_constraintTop_toTopOf="@id/character_fragment_species" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_fragment_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text_view"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toStartOf="@id/tv_character_fragment_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_fragment_species" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_character_fragment_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/character_fragment_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_fragment_gender"
                app:layout_constraintTop_toTopOf="@id/character_fragment_gender" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_fragment_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text_view"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toStartOf="@id/tv_character_fragment_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_fragment_gender" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_character_fragment_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/character_fragment_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_fragment_location"
                app:layout_constraintTop_toTopOf="@id/character_fragment_location" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_episodes"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text_view"
                android:text="@string/episode_with_character"
                app:layout_constraintTop_toBottomOf="@id/character_fragment_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/pb_character_detail_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading_error"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



